Correct required links text alignment

--- a/css/src/_footer.scss
+++ b/css/src/_footer.scss
@@ -54,7 +54,10 @@
 
 	.req-links {
 		@include xy-grid-container;
-		margin-bottom: 0;
+		margin: {
+			bottom: 0;
+			left: auto;
+		}
 		text-align: center;
 	}
 
